# scratch

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: App.cpp  App.h
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: FileUtil.cpp  FileUtil.h  IdGen.cpp  IdGen.h  Logger.cpp  Logger.h  Project.cpp  Project.h  Serialization.cpp  Serialization.h  Time.cpp  Time.h  Watchdog.cpp  Watchdog.h
src/model/: Block.h  Costume.cpp  Costume.h  Script.h  Sound.h  Sprite.h  Stage.h
src/renderer/: Renderer2D.cpp  Renderer2D.h  TextureCache.cpp  TextureCache.h
src/runtime/: Runtime.cpp  Runtime.h  ScriptRunner.cpp  ScriptRunner.h
src/ui/: EditorState.h  MainDockspace.cpp  MainDockspace.h
src/ui/Panels/: BlocksPalettePanel.cpp  BlocksPalettePanel.h  CostumesPanel.cpp  CostumesPanel.h  ExtensionsPanel.cpp  ExtensionsPanel.h  HelpPanel.cpp  HelpPanel.h  InspectorPanel.cpp  InspectorPanel.h  ScriptWorkspacePanel.cpp  ScriptWorkspacePanel.h  SettingsPanel.cpp  SettingsPanel.h  SoundsPanel.cpp  SoundsPanel.h  SpritePanel.cpp  SpritePanel.h  StagePanel.cpp  StagePanel.h
